feat: use grid for block grid in ministry pages

--- a/src/data/ministries/children.mdx
+++ b/src/data/ministries/children.mdx
@@ -4,6 +4,9 @@ excerpt: Our Children's Ministry exists to serve both parents and children. We s
 image: ~/assets/images/ministry-children-aedd843b-8225-4859-90c0-5025bd3ff92a.jpg
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-childrens-header.jpg](~/assets/images/ministry-children-aedd843b-8225-4859-90c0-5025bd3ff92a.jpg)
 
 Our Children's Ministry exists to serve both parents and children. We serve parents by coming alongside them in their efforts to teach their children sound Biblical truth with the ultimate desire that the Lord will give them new life and a heart to serve Him. We serve children by providing a safe and enjoyable environment where the Word of God is taught faithfully and Christ is exalted.
