--- a/src/data/ministries/counseling.mdx
+++ b/src/data/ministries/counseling.mdx
@@ -4,6 +4,9 @@ excerpt: Our desire is to help you glorify God in your thoughts, words and actio
 image: ~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-counseling-header.webp](~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp)
 
 Our desire is to help you glorify God in your thoughts, words and actions as you walk through life and interact with others.  
