--- a/src/data/ministries/seniors.mdx
+++ b/src/data/ministries/seniors.mdx
@@ -4,6 +4,9 @@ excerpt: The Prime Timers have a great time together.    Sometimes we go out to 
 image: ~/assets/images/ministry-seniors-29dcfb58-2b8f-492d-b55b-150e72c80610.jpg
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-seniors-header.jpg](~/assets/images/ministry-seniors-29dcfb58-2b8f-492d-b55b-150e72c80610.jpg)
 
 The Prime Timers have a great time together.  
