--- a/src/data/ministries/vbs.mdx
+++ b/src/data/ministries/vbs.mdx
@@ -4,6 +4,9 @@ excerpt: It’s all about Jesus and the call for kids to live for his glory.    
 image: ~/assets/images/ministry-vbs-b2074450-fc13-4187-8e54-fbf33eb78522.png
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-vbs-wonder-junction-header.png](~/assets/images/ministry-vbs-b2074450-fc13-4187-8e54-fbf33eb78522.png)
 
 It’s all about Jesus and the call for kids to live for his glory.  
