--- a/src/data/ministries/home-group.mdx
+++ b/src/data/ministries/home-group.mdx
@@ -4,6 +4,9 @@ excerpt: Home Groups are a place to develop deep relationships within the body o
 image: ~/assets/images/ministry-home-group-e0677497-5dfc-480a-ac7e-a180e3422a30.webp
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-home-groups-header.dtvptrrg_1qurhh.webp](~/assets/images/ministry-home-group-e0677497-5dfc-480a-ac7e-a180e3422a30.webp)
 
 Home Groups are a place to develop deep relationships within the body of Christ.  
