--- a/src/data/ministries/men.mdx
+++ b/src/data/ministries/men.mdx
@@ -4,6 +4,9 @@ excerpt: Helping men live godly lives through biblical truth....
 image: ~/assets/images/ministry-men-b2c2c3ec-9909-4e5c-b995-a01c87859504.jpg
 ---
 
+import Image from '~/components/common/Image.astro';
+import BlockGrid from '~/components/ministries/BlockGrid.astro';
+
 ![ministry-mens-header.jpg](~/assets/images/ministry-men-b2c2c3ec-9909-4e5c-b995-a01c87859504.jpg)
 
 Helping men live godly lives through biblical truth.
