feat: handle section header image height

--- a/src/data/ministries/women.mdx
+++ b/src/data/ministries/women.mdx
@@ -10,7 +10,7 @@ import BlockGrid from '~/components/ministries/BlockGrid.astro';
 Women's Ministry
 ================
 
-![background](~/assets/images/ministry-women-77666f24-334b-4b65-a53d-664974c61961.jpeg)
+<Image src="~/assets/images/ministry-women-77666f24-334b-4b65-a53d-664974c61961.jpeg" class="w-full h-40 rounded shadow-lg bg-gray-400 dark:bg-slate-700" widths={[400, 900]} width={400} sizes="(max-width: 900px) 400px, 900px" alt="background" aspectRatio="16:9" layout="cover" loading="lazy" decoding="async" />
 
 ---
 
@@ -28,73 +28,40 @@ Events hosted by the Women's Ministry provide a connection to encourage women to
 ![find connection.jpg](~/assets/images/ministry-women-c0bb92b3-41a6-428a-a107-f60f008087fc.jpg)
 
 { /* Block Grid - START */ }
-
 export const items_858cfac0_f667_4eb5_8cb2_0691e06eb198 = [
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-0.png",
-
         title: "Spring Tea",
-
         text: "Date: March 29th, 2025<br />Time: 10:00am<br /><br />Registration is open!<br />Sign-up on the Church Center App or in the foyer",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-1.png",
-
         title: "Ladies Retreat",
-
         text: "Date: Fall of 2025<br /><br /><br />Location: Canby Grove Retreat Center",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-2.png",
-
         title: "Bible Studies",
-
         text: "Monday: 9:00am<br /><br />Tuesday: 6:30pm<br />coincides with Men's Study<br /><br />Wednesday: 9:00am<br />childcare provided<br /><br />Thursday: 10:00am",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-3.jpg",
-
         title: "Christmas Gathering",
-
         text: "Date: December 2025<br /><br /><br />A celebratory time with a devotion, fellowship, a shared meal, and cookie decorating!",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-4.jpg",
-
         title: "Worship Nights",
-
         text: "Date: Intermittent throughout the year<br /><br />An evening of praise to our Lord and Savior.",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-858cfac0-f667-4eb5-8cb2-0691e06eb198-5.png",
-
         title: "Prayer Breakfasts",
-
         text: "Date: Intermittent throughout the year<br /><br />A morning time of devotion, fellowship, and food.",
-
     },
-
 ];
 
 <BlockGrid items={items_858cfac0_f667_4eb5_8cb2_0691e06eb198} columns={3} />
-
 { /* Block Grid - END */ }
 
 ![join us 4.jpg](~/assets/images/ministry-women-7a91fd19-092c-4c59-9618-9204777ad045.jpg)
@@ -102,31 +69,19 @@ export const items_858cfac0_f667_4eb5_8cb2_0691e06eb198 = [
 ![women's retreat photo 2024.jpg](~/assets/images/ministry-women-26a34271-5e28-48d3-8aea-ddfcdfb3afde.jpg)
 
 { /* Block Grid - START */ }
-
 export const items_d0866aee_a229_4c1d_980f_c8dd557e1225 = [
-
     {
-
         imageUrl: "~/assets/images/ministry-women-d0866aee-a229-4c1d-980f-c8dd557e1225-0.jpeg",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-d0866aee-a229-4c1d-980f-c8dd557e1225-1.jpeg",
-
     },
-
     {
-
         imageUrl: "~/assets/images/ministry-women-d0866aee-a229-4c1d-980f-c8dd557e1225-2.jpeg",
-
     },
-
 ];
 
 <BlockGrid items={items_d0866aee_a229_4c1d_980f_c8dd557e1225} columns={3} />
-
 { /* Block Grid - END */ }
 
 ![contact.jpg](~/assets/images/ministry-women-cfa3c2e1-a600-4738-b56d-438405639354.jpg)
