Revert "feat: add video block support (youtube)"
This reverts commit 4c193c258d0555bcc0af8095bf88f67d3fba380a.

--- a/src/data/ministries/children.mdx
+++ b/src/data/ministries/children.mdx
@@ -1,24 +1,23 @@
 ---
 title: "Children's Ministry"
-excerpt: "Our Children's Ministry exists to serve both parents and children. We serve parents by coming alongs..."
-image: "~/assets/images/ministry-children-aedd843b-8225-4859-90c0-5025bd3ff92a.jpg"
+excerpt: Our Children's Ministry exists to serve both parents and children. We serve parents by coming alongs...
+image: ~/assets/images/ministry-children-aedd843b-8225-4859-90c0-5025bd3ff92a.jpg
 ---
 
 import Image from '~/components/common/Image.astro';
 import BlockGrid from '~/components/ministries/BlockGrid.astro';
-import Button from '~/components/ui/Button.astro';
 
 ![ministry-childrens-header.jpg](~/assets/images/ministry-children-aedd843b-8225-4859-90c0-5025bd3ff92a.jpg)
 
 Our Children's Ministry exists to serve both parents and children. We serve parents by coming alongside them in their efforts to teach their children sound Biblical truth with the ultimate desire that the Lord will give them new life and a heart to serve Him. We serve children by providing a safe and enjoyable environment where the Word of God is taught faithfully and Christ is exalted.
 
 Mission
--------
+=======
 
 Our Mission is to glorify God by making disciples of Jesus Christ and teaching them to obey the truths of scripture so they may fulfill the Great Commission. This is accomplished by evangelizing children, encouraging parents, and edifying servants so the gospel may be spread, and the church may be strengthened.
 
 Sunday Morning
---------------
+==============
 
 Children's Ministry Classes are offered during both worship services at 9am and 10:45am
 
@@ -27,7 +26,7 @@ Please visit the check-in station before attendance. Your child will receive a s
 First time visiting? Save time by completing our online registration form. This will allow you to check in quickly when you arrive.
 
 Nursery & Pre-K Classes
------------------------
+=======================
 
 Meet throughout the Worship Service
 
@@ -37,19 +36,18 @@ Meet throughout the Worship Service
 Our nursery and pre-k classes are safe and loving environments that prepare age-appropriate Bible story reading, songs, hands-on activities, and snacks.
 
 K-5th Grade Children's Church
------------------------------
+=============================
 
 Children sit with their parents until they are dismissed before the message to their various classrooms.
 
 Children's Church provides age-appropriate Bible lessons and learning activities that are both fun and biblically rich. The children learn about the character of God, the work of Christ, and the means of living in a right relationship with Him.
 
 Does your child have special needs?
------------------------------------
+===================================
 
 If so, we would love to include and accommodate them. We currently have a separate special needs classroom (10:45am only) or volunteers who can be your child's buddy in a class.
 
 Please complete the Children's Ministry Registration form so we can get a little more information to know your child's needs and understand how to best minister to you and your child.
 
-<div class="flex w-full sm:w-auto not-prose">
-    <Button variant="primary" text="Register" href="https://pleasanthome.churchcenter.com/registrations/events/1904085" target="_blank" class="w-auto sm:mb-0" />
-</div>
+<a href="https://pleasanthome.churchcenter.com/registrations/events/1904085" target="_blank">Register</a>
+=========================================================================================================
