--- a/src/data/ministries/youth.mdx
+++ b/src/data/ministries/youth.mdx
@@ -1,12 +1,11 @@
 ---
 title: "Rooted"
-excerpt: "Our purpose is to honor God in all that we do by faithfully grounding ourselves in the truth of the ..."
-image: "~/assets/images/ministry-youth-9b4ba32c-e769-4292-b658-d80366d00c03.png"
+excerpt: Our purpose is to honor God in all that we do by faithfully grounding ourselves in the truth of the ...
+image: ~/assets/images/ministry-youth-9b4ba32c-e769-4292-b658-d80366d00c03.png
 ---
 
 import Image from '~/components/common/Image.astro';
 import BlockGrid from '~/components/ministries/BlockGrid.astro';
-import Button from '~/components/ui/Button.astro';
 
 ![new rooted logo with gradient.png](~/assets/images/ministry-youth-9b4ba32c-e769-4292-b658-d80366d00c03.png)
 
