--- a/src/data/ministries/counseling.mdx
+++ b/src/data/ministries/counseling.mdx
@@ -1,12 +1,11 @@
 ---
 title: "Counseling"
-excerpt: "Our desire is to help you glorify God in your thoughts, words and actions as you walk through life a..."
-image: "~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp"
+excerpt: Our desire is to help you glorify God in your thoughts, words and actions as you walk through life a...
+image: ~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp
 ---
 
 import Image from '~/components/common/Image.astro';
 import BlockGrid from '~/components/ministries/BlockGrid.astro';
-import Button from '~/components/ui/Button.astro';
 
 ![ministry-counseling-header.webp](~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp)
 
