feat: add video block to ministry pages

--- a/src/data/ministries/counseling.mdx
+++ b/src/data/ministries/counseling.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Counseling"
-excerpt: Our desire is to help you glorify God in your thoughts, words and actions as you walk through life a...
-image: ~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp
+excerpt: "Our desire is to help you glorify God in your thoughts, words and actions as you walk through life a..."
+image: "~/assets/images/ministry-counseling-825206bb-1a43-40df-acf5-93f223b38e28.webp"
 ---
 
 import Image from '~/components/common/Image.astro';
