--- a/src/data/ministries/seniors.mdx
+++ b/src/data/ministries/seniors.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Senior Adults' Ministry"
-excerpt: The Prime Timers have a great time together.    Sometimes we go out to eat, sometimes we eat at th...
-image: ~/assets/images/ministry-seniors-29dcfb58-2b8f-492d-b55b-150e72c80610.jpg
+excerpt: "The Prime Timers have a great time together.    Sometimes we go out to eat, sometimes we eat at th..."
+image: "~/assets/images/ministry-seniors-29dcfb58-2b8f-492d-b55b-150e72c80610.jpg"
 ---
 
 import Image from '~/components/common/Image.astro';
@@ -11,4 +11,4 @@ import BlockGrid from '~/components/ministries/BlockGrid.astro';
 
 The Prime Timers have a great time together.  
   
-Sometimes we go out to eat, sometimes we eat at the church.  We might have a game day or go to a museum.  Whatever it is, we have fun.  If you are 50+ (or have a spouse who is), you are welcome to join us.
+Sometimes we go out to eat, sometimes we eat at the church. We might have a game day or go to a museum. Whatever it is, we have fun. If you are 50+ (or have a spouse who is), you are welcome to join us.
