--- a/src/data/ministries/vbs.mdx
+++ b/src/data/ministries/vbs.mdx
@@ -1,14 +1,58 @@
 ---
 title: "Vacation Bible School"
-excerpt: It’s all about Jesus and the call for kids to live for his glory.    Howdy there, partner! You rea...
-image: ~/assets/images/ministry-vbs-b2074450-fc13-4187-8e54-fbf33eb78522.png
+excerpt: "SAVE THE DATE:------------------June 23rd - June 27th, 2025---------------------------Re..."
+image: "~/assets/images/ministry-vbs-9ccecc67-72fd-4d2e-b958-84bf8ee8615c.jpg"
 ---
 
 import Image from '~/components/common/Image.astro';
 import BlockGrid from '~/components/ministries/BlockGrid.astro';
 
+Vacation Bible School
+=====================
+
+<Image src="~/assets/images/ministry-vbs-9ccecc67-72fd-4d2e-b958-84bf8ee8615c.jpg" class="w-full h-40 rounded shadow-lg bg-gray-400 dark:bg-slate-700" widths={[400, 900]} width={400} sizes="(max-width: 900px) 400px, 900px" alt="background" aspectRatio="16:9" layout="cover" loading="lazy" decoding="async" />
+
+**SAVE THE DATE:**
+------------------
+
+June 23rd - June 27th, 2025
+---------------------------
+
+**Registration opens in April, 2025**
+-------------------------------------
+
 ![ministry-vbs-wonder-junction-header.png](~/assets/images/ministry-vbs-b2074450-fc13-4187-8e54-fbf33eb78522.png)
 
-It’s all about Jesus and the call for kids to live for his glory.  
+It's all about Jesus and the call for kids to live for his glory.  
   
-Howdy there, partner! You ready for a grand ol’ time next summer, discovering the wonder of Jesus? If so, grab yer stirrups and lasso and hightail it out west to Wonder Junction where kids will marvel at Jesus and learn that we live for his glory.
+Howdy there, partner! You ready for a grand ol' time next summer, discovering the wonder of Jesus? If so, grab yer stirrups and lasso and hightail it out west to Wonder Junction where kids will marvel at Jesus and learn that we live for his glory.
+
+<div class="aspect-w-16 aspect-h-9 my-14">
+    <iframe src="https://www.youtube.com/embed/x-Pmdbco10w?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1" frameborder="0" title="Video Embed"></iframe>
+</div>
+
+
+{ /* Block Grid - START */ }
+export const items_107ef64e_a99d_4c8c_bc43_eaa258f3b33f = [
+    {
+        title: "Assembly",
+    },
+    {
+        title: "Crafts",
+    },
+    {
+        title: "Science",
+    },
+    {
+        title: "Games",
+    },
+    {
+        title: "Snacks",
+    },
+    {
+        title: "Bible",
+    },
+];
+
+<BlockGrid items={items_107ef64e_a99d_4c8c_bc43_eaa258f3b33f} columns={3} />
+{ /* Block Grid - END */ }
