--- a/src/data/ministries/youth.mdx
+++ b/src/data/ministries/youth.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Rooted"
-excerpt: Our purpose is to honor God in all that we do by faithfully grounding ourselves in the truth of the ...
-image: ~/assets/images/ministry-youth-9b4ba32c-e769-4292-b658-d80366d00c03.png
+excerpt: "Our purpose is to honor God in all that we do by faithfully grounding ourselves in the truth of the ..."
+image: "~/assets/images/ministry-youth-9b4ba32c-e769-4292-b658-d80366d00c03.png"
 ---
 
 import Image from '~/components/common/Image.astro';
