--- a/src/data/ministries/men.mdx
+++ b/src/data/ministries/men.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Men's Ministry"
-excerpt: Helping men live godly lives through biblical truth....
-image: ~/assets/images/ministry-men-b2c2c3ec-9909-4e5c-b995-a01c87859504.jpg
+excerpt: "Helping men live godly lives through biblical truth...."
+image: "~/assets/images/ministry-men-b2c2c3ec-9909-4e5c-b995-a01c87859504.jpg"
 ---
 
 import Image from '~/components/common/Image.astro';
