--- a/src/data/ministries/women.mdx
+++ b/src/data/ministries/women.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Women's Ministry"
-excerpt: Older women likewise are to be reverent in behavior, not slanderers or slaves to much wine.  They a...
-image: ~/assets/images/ministry-women-77666f24-334b-4b65-a53d-664974c61961.jpeg
+excerpt: "Older women likewise are to be reverent in behavior, not slanderers or slaves to much wine.  They a..."
+image: "~/assets/images/ministry-women-77666f24-334b-4b65-a53d-664974c61961.jpeg"
 ---
 
 import Image from '~/components/common/Image.astro';
