--- a/src/data/ministries/vbs.mdx
+++ b/src/data/ministries/vbs.mdx
@@ -22,7 +22,7 @@ June 23rd - June 27th, 2025
 -------------------------------------
 
 <div class="aspect-w-16 aspect-h-9 my-14">
-    <iframe src="https://www.youtube.com/embed/x-Pmdbco10w?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1" frameborder="0" title="Video Embed"></iframe>
+    <iframe src="https://www.youtube.com/embed/x-Pmdbco10w?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1" title="Video Embed"></iframe>
 </div>
 
 
